# s2t-fs-dev

./: .cursorrules  .env.example  .gitignore  404.html  Dockerfile  MLproject  Makefile  README.md  environment.yml  index.html  mkdocs.yml  mlflow.db  mlruns_nested_try.db  pyproject.toml  run_16_experiments.py  s2t-fs-experiments.db  s2t_experiments.db  test_lgb.py
.claude/: settings.json  settings.local.json
architecture/: index.html
completed_experiments/: index.html
configs/: config.yaml  create_parquet.yaml  explore_fastt_alternating_ami.json  explore_fastt_boosted_ami.json  fastt_synthetic_config.json  margin_optimization_ami.json  model_comparison_ami.json  model_comparison_common_voice.json  model_comparison_librispeech.json  model_comparison_voxpopuli.json  preprocess.yaml  synt-exp_fastt-alternating-diagonal.json  synt-exp_fastt-alternating-linear.json  synt-exp_fastt-alternating-nonlinear.json  synt-exp_fastt-boosted-diagonal.json  synt-exp_fastt-boosted-lowrank.json  try_to_improve_our_models_voxpopuli.json  xgboost_hpt_config.json
docs/: architecture.md  completed_experiments.md  experiment-tracking.md  experiment_orchestration.md  experiments.md  getting-started.md  index.md  mkdocs.yml  models.md  remote-execution.md  synthetic_transforms_rationale.md
experiment-tracking/: index.html
experiment_orchestration/: index.html
experiments/: index.html
getting-started/: index.html
models/: index.html
notebooks/: 00-hk-loguru-mlflow-deneme.ipynb  01_hk_mlflow.ipynb  02_hk_test_diagonalgating.ipynb  03_hk_test_fastt_alternating.ipynb  base_model.ipynb  mlflow.db  mlflow.db~  raw_data.ipynb  s2t_experiments.db
other/: mlflow.db copy  mlruns_nested_try.db  opus_prompt.md  s2t_experiments.db  test_optuna_mlflow.py
remote-execution/: index.html
reports/: EXPERIMENTAL_PLAN.md
s2t_fs_v2/: COLAB.md  __init__.py  aggregate.py  config.py  data.py  methods.py  metrics.py  (+2 more)
(+374 files in other folders)
