[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "s2t_fs"
version = "0.0.1"
description = "Source codes and reproducibility package of the correspondng research paper"
authors = [
  { name = "H\u00fcseyin Karaca" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["s2t_fs"]
include = ["pyproject.toml", "s2t_fs/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["s2t_fs"]
force-sort-within-sections = true

