[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "s2t_fs"
version = "0.0.1"
description = "Source codes and reproducibility package of the correspondng research paper"
authors = [
  { name = "Hüseyin Karaca" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = "~=3.10.0"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=14",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "torch>=2.0",
    "optuna>=4.3",
    "optuna-integration>=4.3",
    "mlflow>=3.10",
    "python-dateutil>=2.7",
    "python-dotenv",
    "mkdocs",
    "mkdocs-material",
    "gdown",
    "loguru",
    "lightgbm>=4.0",
    "ruff",
    "ipykernel",
    "transformers>=5.5.0",
    "datasets>=4.8.4",
    "jiwer>=4.0.0",
    "evaluate>=0.4.6",
    "hydra-core>=1.3",
]

[tool.hatch.build.targets.wheel]
packages = ["s2t_fs"]

[tool.ruff]
line-length = 99
src = ["s2t_fs"]
include = ["pyproject.toml", "s2t_fs/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["s2t_fs"]
force-sort-within-sections = true
